--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     class="pt-24 md:mt-0 md:h-screen flex flex-col justify-center text-center md:text-left md:flex-row md:justify-between md:items-center lg:px-48 md:px-12 px-4 bg-secondary">
     <div class="md:flex-1 md:mr-10">
       <h1 class="font-pt-serif text-5xl font-bold mb-7">
-        A headline for your
+        We secure your
         <span class="bg-underline1 bg-left-bottom bg-no-repeat pb-2 bg-100%">
-          cool website
+          software
         </span>
       </h1>
       <p class="font-pt-serif font-normal mb-7">
@@ -74,10 +74,10 @@
       </p>
       <div class="font-montserrat">
         <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-2 mb-2">
-          Call to action
+          Core Team
         </button>
         <button class="px-6 py-4 border-2 border-black border-solid rounded-lg">
-          Secondary action
+         Contact us
         </button>
       </div>
     </div>
